tests/snapshots/trace_solver__spanshot_request@13586259396299843864.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_mut_inside_shared: false
    rules_display_style: Plain
  bundle_name: ~
  request: "[&mut ref x]: [&mut T]"
---
[&mut ref x] @ p: [&mut T]
// Applying rule `Constructor`
&mut ref x @ p.0: &mut T
// Applying rule `Deref(EatOuter)`
ref x @ *p.0: T
// Applying rule `BindingBorrow`
x @ &*p.0: &T
// Applying rule `Binding`
let x: &T = &*p.0

// Final bindings (simplified):
let x: &T = &*p.0;
