tests/snapshots/trace_solver__spanshot_request@13857059213265718195.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: Skip
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
    rules_display_style: Plain
  bundle_name: default
  request: "[ref mut x]: &mut [T]"
---
[ref mut x] @ p: &mut [T]
// Applying rule `ConstructorRef`
ref mut x @ &mut (*p).0: &mut T
// Applying rule `RefBindingResetBindingMode`
ref mut x @ (*p).0: T
// Applying rule `BindingBorrow`
x @ &mut (*p).0: &mut T
// Applying rule `Binding`
let x: &mut T = &mut (*p).0

// Final bindings (simplified):
let x: &mut T = &mut (*p).0;
